[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/Effects/Textures/vile_flame.png" type="Texture" id=1]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Bosses/Vile/FirePillar.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Textures/vile_spark.png" type="Texture" id=4]
[ext_resource path="res://src/Effects/Materials/VileShotParticles.tres" type="Material" id=5]
[ext_resource path="res://src/Sounds/Rooster - Highkick.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Effects/Deflect/lemon_deflect.png" type="Texture" id=8]
[ext_resource path="res://src/Sounds/Rooster - FireUp.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/Effects/Textures/blue_explosion.png" type="Texture" id=10]
[ext_resource path="res://src/Actors/Bosses/Vile/vile_firepillar.res" type="SpriteFrames" id=11]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=12]
[ext_resource path="res://src/Sounds/Rooster - Knee.ogg" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 48, 32, 48 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 36.0
} ]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6, 41 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 87.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15, 5 )

[node name="FirePillar" type="KinematicBody2D" groups=["Enemy Projectile"]]
z_index = 9
collision_layer = 16
script = ExtResource( 3 )
damage = 4.0

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -18 )
frames = SubResource( 15 )
frame = 3
playing = true

[node name="firepillarSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -72 )
frames = ExtResource( 11 )
animation = "loop"
frame = 35
playing = true
offset = Vector2( 0, -15 )
flip_h = true

[node name="particles2D" type="Particles2D" parent="."]
visible = false
material = SubResource( 1 )
z_index = -1
amount = 16
lifetime = 0.15
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="rise" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -5.0
max_distance = 800.0
bus = "SFX"

[node name="fall" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -8.0
pitch_scale = 0.85
max_distance = 800.0
bus = "SFX"

[node name="start" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -5.0
max_distance = 800.0
bus = "SFX"

[node name="end" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
max_distance = 800.0
bus = "SFX"

[node name="Hit Particle" parent="." instance=ExtResource( 7 )]
texture = ExtResource( 10 )
hframes = 4
vframes = 4
animation_speed = 24.0
vertical_flip_chance = 0.0

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 7 )

[node name="DamageOnTouch" type="Node2D" parent="."]
visible = false
script = ExtResource( 12 )
damage = 4.0

[node name="DamagerLong" type="Node2D" parent="."]
visible = false
script = ExtResource( 12 )
active = false
damage = 3.0

[node name="area2D" type="Area2D" parent="DamagerLong"]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamagerLong/area2D"]
position = Vector2( 0, -35 )
shape = SubResource( 16 )

[node name="DamagerEnd" type="Node2D" parent="."]
visible = false
script = ExtResource( 12 )
active = false
damage = 3.0

[node name="area2D" type="Area2D" parent="DamagerEnd"]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="DamagerEnd/area2D"]
position = Vector2( 0, -81.5 )
shape = SubResource( 17 )

[node name="HittableArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="HittableArea"]
shape = SubResource( 5 )

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
position = Vector2( 12, -2 )
z_index = 4
z_as_relative = false
texture = ExtResource( 8 )
hframes = 3
vframes = 2
script = ExtResource( 2 )
animation_speed = 32.0
one_shot = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 8 )
